--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prepublishOnly": "tsc",
+    "postpublish": "clean-typescript-build .",
     "test": "tsc --noEmit"
   },
   "repository": {
@@ -24,7 +25,8 @@
   "homepage": "https://github.com/ksxnodemodules/typescript-tuple#readme",
   "devDependencies": {
     "typescript": "^3.1.1",
-    "static-type-assert": "^3.0.0"
+    "static-type-assert": "^3.0.0",
+    "clean-typescript-build": "^0.0.7"
   },
   "engines": {
     "typescript": "^3.0.0"
