--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Generics to work with tuples in TypeScript",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "pnpm run lint && tsc",
     "clean": "clean-typescript-build .",
+    "lint": "tslint -p .",
+    "lint:fix": "pnpm run lint --fix",
     "prepublishOnly": "pnpm run build",
     "postpublish": "pnpm run clean",
-    "test": "tsc --noEmit"
+    "test": "pnpm run lint && tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,8 @@
   },
   "devDependencies": {
     "typescript": "^3.1.1",
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^8.0.1",
     "static-type-assert": "^3.0.0",
     "toolcheck": "^0.0.5",
     "clean-typescript-build": "^0.0.7"
