--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "typescript-compare": "^0.0.2"
   },
   "devDependencies": {
-    "typescript": "~3.1.1",
-    "tslint": "^6.0.0",
-    "tslint-config-standard": "^8.0.1",
-    "static-type-assert": "^3.0.0",
-    "toolcheck": "^0.0.5",
-    "clean-typescript-build": "^0.1.0"
+    "typescript": "^4.0.2",
+    "tslint": "^6.1.3",
+    "tslint-config-standard": "^9.0.0",
+    "static-type-assert": "^4.0.0",
+    "toolcheck": "^0.1.4",
+    "clean-typescript-build": "^0.1.5"
   }
 }
