--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "typescript-compare": "^0.0.2"
   },
   "devDependencies": {
-    "typescript": "^4.0.2",
+    "typescript": "~4.0.2",
     "tslint": "^6.1.3",
     "tslint-config-standard": "^9.0.0",
     "static-type-assert": "^4.0.0",
